Details
-
Bug
-
Resolution: Done
-
P2: Important
-
6.3
-
None
-
-
e7f58f9448 (qt/qtmultimedia/dev) 4a5a7d2b3a (qt/qtmultimedia/6.2) 4bf5f32437 (qt/qtmultimedia/6.3)
Description
25: FAIL! : tst_QMediaPlayerBackend::processEOS() Compared values are not the same 25: Actual (((player.position()))): 1000 25: Expected (0) : 0
Attachments
Issue Links
- resulted from
-
QTBUG-99096 Android tst_qmediaplayerbackend test failed
-
- Closed
-
For Gerrit Dashboard: QTBUG-99183 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
386181,3 | Fix qmediaplayerbackend processEOS test in Android | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
386247,2 | Fix qmediaplayerbackend processEOS test in Android | 6.3 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
386248,2 | Fix qmediaplayerbackend processEOS test in Android | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |