Fix qmediaplayerbackend processEOS test in Android

Missing behavior. When EndOfMedia, pause should set Position to 0 and
Media Status to BufferedMedia. Added this behavior to
qandroidmediaplayer.

Fixes: QTBUG-99183
Change-Id: I80693060a7efde8f70018b2b2415f2674a16189b
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit e7f58f9448127b64507d9c85928e0e153663ed98)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>